Fix export bitmaps always visible and images scrollable

--- a/src/styles/canvas.scss
+++ b/src/styles/canvas.scss
@@ -274,6 +274,12 @@ main {
   right: 0;
 }
 
+.inspector-slices {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 .navbar {
   left: -240px;
   width: 240px;
